<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/azure">

<TextView
    android:id="@+id/textView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingTop="10dp"
    android:textStyle="bold|italic"
    android:textSize="26sp"
    android:text="@string/about_koteret"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:textColor="@color/blue1" />

       <ScrollView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:scrollbarSize="10dp"
android:scrollbars="vertical" >
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:stretchColumns="*" >

        

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/menael"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="22sp"
                android:textColor="@color/blue1"
                android:textStyle="italic" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
 			android:stretchColumns="*">

            <TextView
                android:id="@+id/textView4"
               android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/blue1"
                android:text="@string/daf_kesher"
                 android:drawableTop="@drawable/phone"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textStyle="italic" />

        </TableRow>

       

        <TableRow
            android:id="@+id/tableRow7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/office"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/blue1"
                android:textStyle="italic"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:autoLink="phone"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="italic"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:gravity="center"
                android:textStyle="italic"
                android:textSize="20sp"
                android:autoLink="email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/blue1"
                android:text="@string/odot"
                android:drawableTop="@drawable/galgal"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textStyle="italic" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/odot2"
                android:drawableTop="@drawable/kasda"
                android:textColor="@color/blue1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textStyle="italic" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/blue1"
                android:text="@string/odot3"
                android:drawableTop="@drawable/graf"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:textStyle="italic" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/odot1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20sp"
                android:drawableTop="@drawable/bait"
                android:textColor="@color/blue1"
                android:textStyle="italic" />
                
</TableRow>
        

    </TableLayout>
</ScrollView>
</LinearLayout>