<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_b" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/button"
        android:textColor="@color/blue1"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="26sp"
        android:textStyle="bold|italic"
        android:padding="8dp" />

    <TableLayout
android:layout_height="wrap_content"
android:layout_width="wrap_content"
android:layout_gravity="center"
android:stretchColumns="*">
<TableRow>

    <Button
        android:id="@+id/ButtonB1"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:drawableLeft="@drawable/icon_pdf"
        android:gravity="center"
        android:onClick="onClickBetihut"
        android:tag="NG1"
        android:textColor="@color/blue1"
        android:text="@string/NG1"
        android:textSize="20sp"
        android:textStyle="bold|italic" />
</TableRow>
<TableRow >
    <Button
      	android:id="@+id/ButtonB2"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:textColor="@color/blue1"
        android:text="@string/NG2"
        android:drawableLeft="@drawable/icon_pdf"
        android:textSize="20sp"
        android:onClick="onClickBetihut"
        android:textStyle="bold|italic"
        android:tag="NG2" />
    </TableRow>
    <TableRow>
    <Button
      	android:id="@+id/ButtonB3"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/NG3"
        android:textColor="@color/blue1"
        android:drawableLeft="@drawable/icon_pdf"
        android:textSize="20sp"
        android:onClick="onClickBetihut"
        android:textStyle="bold|italic"
        android:tag="NG3" />
</TableRow>
    <TableRow >
    <Button
      	android:id="@+id/ButtonB4"
        android:layout_width="272dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/NG4"
        android:textColor="@color/blue1"
        android:drawableLeft="@drawable/icon_pdf"
        android:textSize="20sp"
        android:onClick="onClickBetihut"
        android:textStyle="bold|italic" 
        android:tag="NG4"/>
    </TableRow>
    
    </TableLayout>
</LinearLayout>
